--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
         <h1>Calcule Sua GPA</h1>
     </header>
     <main>
+        <section>
+            <div class="inputData">
+                <p>Número de disciplinas: <input type="number"></p>
+            </div>
+            <div class="outputData">
 
+            </div>
+        </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
