--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section>
             <div class="inputData">
-                <p>Número de disciplinas: <input type="number"></p>
+                <p>Número de disciplinas: <input type="number" id="txtSubject"></p>
             </div>
             <div class="outputData">
 
