--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Calcule Sua GPA</h1>
+        <h1>GPA M60</h1>
     </header>
     <main>
         <section>
