--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>GPA M60</h1>
+        <img src="images/logo.png" alt="">
     </header>
     <main>
         <section class="main">
@@ -26,7 +26,7 @@
         </section>
     </main>
     <footer>
-
+        <p>Site desenvolvido pela parceria de Angell Belger com Matheus Tomoto</p>
     </footer>
     <script src="script.js"></script>
 </body>
