--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Calculadora GPA - M60</title>
+    <title>Calculator GPA - M60</title>
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="">
+        <img src="images/logo.png" alt="" id="logo">
     </header>
     <main>
         <section class="main">
             <div class="inputData">
+                <h1>Calculator GPA - M60</h1>
                 <h1>Add Subject:</h1>
                 <p>Subject: <input type="text" id="subject"></p>
                 <p>Note: <input class="number" type="number" id="note"> Credit: <input class="number" type="number" id="credit"><input class="b" type="button" value="Add subjects" onclick="addSub()"></p>
