--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <h1>Add Subject:</h1>
                         <p>Subject: <input type="text" id="subject"></p>
                         <p>Note: <input class="number" type="number" id="note"> Credit: <input class="number" type="number" id="credit"></p>
-                        <p><input class="add" type="button" value="Add subjects" onclick="addSub()"></p>
+                        <p><input class="btc" type="button" value="Add subjects" onclick="addSub()"></p>
                     </fieldset>
                 </div>
                 <div class="outputData">
